# ctaphid-dispatch

./: CHANGELOG.md  Cargo.toml
.github/workflows/: cd-test.yml  cd.yml  ci.yml
app/: CHANGELOG.md  Cargo.toml
app/src/: command.rs  lib.rs
dispatch/: CHANGELOG.md  Cargo.toml
dispatch/src/: app.rs  dispatch.rs  lib.rs  types.rs
src/: app.rs  command.rs  dispatch.rs  lib.rs  types.rs
