[workspace]
members = ["app", "dispatch"]
resolver = "2"

[workspace.package]
authors = ["Conor Patrick <conor@solokeys.com>", "Nicolas Stalder <n@stalder.io>", "The Trussed developers"]
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/solokeys/ctaphid-dispatch"

[workspace.dependencies]
heapless = "0.7"
trussed = "0.1.0"

[patch.crates-io]
ctaphid-app.path = "app"
trussed = { git = "https://github.com/trussed-dev/trussed.git", rev = "51e68500d7601d04f884f5e95567d14b9018a6cb" }
