[workspace]
members = ["app", "dispatch"]
resolver = "2"

[workspace.package]
authors = ["Conor Patrick <conor@solokeys.com>", "Nicolas Stalder <n@stalder.io>", "The Trussed developers"]
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/solokeys/ctaphid-dispatch"

[workspace.dependencies]
heapless = "0.7"
trussed-core = "0.1"

[patch.crates-io]
ctaphid-app.path = "app"
trussed-core = { git = "https://github.com/trussed-dev/trussed.git", rev = "8a9bb9d79e40c2dcf026cf611302109f776bec83" }
