[workspace]
members = ["app", "dispatch"]
resolver = "2"

[workspace.package]
authors = ["Conor Patrick <conor@solokeys.com>", "Nicolas Stalder <n@stalder.io>", "The Trussed developers"]
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/solokeys/ctaphid-dispatch"

[workspace.dependencies]
heapless-bytes = "0.3"
trussed-core = "0.1.0-rc.1"

[patch.crates-io]
ctaphid-app.path = "app"
