[package]
name = "ctaphid-dispatch"
version = "0.2.0"
description = "Dispatch layer after usbd-ctaphid"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ctaphid-app = "0.1"
delog = "0.1"
heapless-bytes.workspace = true
interchange = "0.3.0"
ref-swap = "0.1.2"
trussed-core.workspace = true

[features]
default = []
std = ["delog/std"]
backend-dilithium2 = []
backend-dilithium3 = []
backend-dilithium5 = []


log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []
